Fri Jun 2 18:05:16 1995 Keith Vetter (keithv@fusion.com)

	* error_message.c: better handling of Winsock errors.

Tue May  2 21:35:09 1995  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: remove spurious whitespace from blank line

Fri Apr 14 08:48:00 1995  Theodore Y. Ts'o  (tytso@dcl)

	* com_err.h: If FAR is not defined, define it away.

Thu Apr 13 16:02:24 1995 Keith Vetter (keithv@fusion.com)

        * com_err.c, compile_et.c, error_ta.h, et_c.awk, internal.h:
           __STDC__ conditionals also checks for the _WINDOWS define.

Wed Apr 5 16:25:35 1995 Keith Vetter (keithv@fusion.com)

	* com_err.h: added FAR to pointers in prototypes.

Wed Mar 29 08:56:47 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in:  Fix up Mac makefile.
	* error_message.c:  For errno, use strerror if HAS_STRERROR.
	* configure.in:  Define HAS_STRERROR.

Thu Mar 23 19:00:03 1995  Theodore Y. Ts'o  <tytso@dcl>

	* com_err.c (default_com_err_proc): Fixed breakage introduced by
		windows port.  com_err() is supposed to print a newline at
		after printing the error message!

Wed Mar 22 11:34:09 1995 Keith Vetter (keithv@fusion.com)

	* com_err.c: added _WINDOWS equivalent condition to HAVE_STDARG_H
 	   since windows fakes autoconf by defining such constants in
	   k5-config.h which isn't included for this file.

Thu Mar 16 19:57:20 1995 Keith Vetter (keithv@fusion.com)

	* com_err.c: added missing INTERFACE on a prototype.
        * com_err.h: added _WINDOWS as an equivalent to __STDC__ since this
           file gets included by windows programs in which __STDC__ isn't defined.
        * makefile.in: added xxx-mac targets to mimic xxx-unix, and added
            copying com_err.h to src\include for the PC.

Wed Mar 16 17:30:00 1995 Keith Vetter (keithv@fusion.com)

	* com_err.h: problem with this file needing k5-config for windows
	   stuff but many application programs don't include it. So for
	   now I've put the windows stuff that is needed directly into it.
