@@ -1,11 +1,13 @@
 AC_INIT(error_table.y)
 WITH_CCOPTS
+WITH_KRB5ROOT
 CONFIG_RULES
 AC_SET_BUILDTOP
 AC_CONST
 AC_PROG_LEX
 AC_PROG_YACC
 AC_PROG_AWK
+AC_PROG_INSTALL
 AC_PROG_ARCHIVE
 AC_PROG_RANLIB
 HAVE_YYLINENO
