@@ -1,3 +1,8 @@
+Tue Jun  6 19:45:34 1995  Tom Yu  (tlyu@dragons-lair)
+
+	* configure.in:
+	* Makefile.in: fix make install
+
 Fri Jun 2 18:05:16 1995 Keith Vetter (keithv@fusion.com)
 
 	* error_message.c: better handling of Winsock errors.
